--- a/pom.xml
+++ b/pom.xml
@@ -8,14 +8,23 @@
   <artifactId>swd</artifactId>
   <version>2.0.0</version>
 
-  <name>swd</name>
+  <name>Selenium Project</name>
   <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>https://github.com/Andre0023</url>
+  <developers>
+    <developer>
+      <id>Andreu</id>
+      <name>Andreu Che</name>
+      <email>Vash0023@gmail.com</email>
+      <url>https://github.com/Andre0023</url>
+    </developer>
+  </developers>
+
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <dependencies>
